...
                        android:layout_height="match_parent"
                        app:layout_constraintDimensionRatio="2.22:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <LinearLayout
                        android:id="@+id/s_trans"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="right"
                        app:layout_constraintBottom_toBottomOf="@id/const1"
                        app:layout_constraintEnd_toEndOf="@id/const1"
                        app:layout_constraintStart_toStartOf="@id/const1"
...
                            android:id="@+id/c_on"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="invisible">

                            <Button
                                android:id="@+id/cursor_on"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:background="@drawable/cursor_on"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="1:1"
...
                                    app:layout_constraintDimensionRatio="1:1"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <Button
                                    android:id="@+id/power"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:layout_width="0dp"
                                    android:layout_height="0dp"
                                    android:background="@drawable/power"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintDimensionRatio="1:1"
...
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/trench"
                        android:text=" 68"
                        android:textSize="@dimen/font_size"
                        app:layout_constraintEnd_toEndOf="@id/text_trans"
...
